@@ -20,6 +20,7 @@
         * [BUGFIX]: #3073 Fixed crash when unloading plugin with its own configuration subpage and saving config dialog.
         * [BUGFIX]: #2931 Fixed incorrect results when executing 2-level queries with an expression and an alias combination as a result column definition.
         * [BUGFIX]: #2942 Fixed deleting multiple tables/indexes/... when selected them and picked "Delete table/index/..." from context menu.
+        * [BUGFIX]: #2945 Fixed manual reordering of database objects with Drag&Drop.
 
 [3.0.7]
         * [ADDED]: #2951 Implemented dropdown value picking for foreign key columns in grid view.
